# zicket-contract

./: .gitignore  Cargo.toml  README.md  TICKET_CONSUMPTION_IMPLEMENTATION.md  fix_tests.py  test_output.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
contracts/event/: Cargo.toml
contracts/event/src/: errors.rs  events.rs  integration_tests.rs  lib.rs  storage.rs  test.rs  test_anon_claims.rs  test_claims.rs  test_privacy.rs  test_zk_passport.rs  types.rs
contracts/factory/: Cargo.toml
contracts/factory/src/: deployment.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/mock-event/src/: lib.rs
contracts/payments/: Cargo.toml
contracts/payments/src/: errors.rs  events.rs  lib.rs  multi_token_test.rs  receipt_commitment_test.rs  revenue_split_test.rs  storage.rs  test.rs  test_privacy_semantics.rs  types.rs
contracts/privacy-utils/src/: lib.rs  test.rs
contracts/ticket/: Cargo.toml
contracts/ticket/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
relayer/: Cargo.toml
relayer/src/: captcha.rs  handlers.rs  main.rs  rate_limit.rs
