[package]
name = "relayer"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
dashmap = "6.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "util"] }
tracing = "0.1"
tracing-subscriber = "0.3"
